heroku works fine, fixed search bar too long error

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -107,4 +107,5 @@
 
 .search {
 	margin-top: 10px;
+	width: 250px;
 }
